# knowledge-base

./: .gitignore  .onedev-buildspec.yml  Dockerfile  README.md  auto-imports.d.ts  bunfig.toml  canvas.html  card.html  chat.html  components.d.ts  feedback.html  index.html  note.html  package.json  pnpm-lock.yaml  preview.html  todo.html  tsconfig.json  tsconfig.node.json  uno.config.ts  visualizer.html  vite.config.ts
config/: vite.chrome.ts  vite.config.ts  vite.docker.ts  vite.tauri.ts  vite.tt.ts  vite.utools.ts  vite.web.ts
env/: .env  .env.docker  .env.tauri  .env.utools  .env.web
public/article/: channing-cyan.css  chinese-red.css  condensed-night-purple.css  devui-blue.css  geek-black.css  github.css  heti.css  juejin.css  jzman.css  smart-blue.css  tailwind-blue.css  v-green.css  vuepress.css  zui.css
public/example/: article.md  changelog.md
public/js/: umami.js  vconsole.min.js
public/tdapp/: sdk_release.min.js  tdapp.min.js
public/theme/: black.css  blue.css  chinese-red.css  ghibli.css  green.css  grey.css  ochre.css  pink.css
server/: package.json  pnpm-lock.yaml  pom.xml
server/src/: app.ts
src/: App.vue  main.ts  vite-env.d.ts
src-chrome/: manifest.json
src-chrome/src/: background.js
src-java/: pom.xml
src-server/: .gitignore  Dockerfile  README.md  bash.exe.stackdump  bunfig.toml  env.d.ts  nitro.config.ts  package.json  pnpm-lock.yaml  tsconfig.json
src-server/src/: index.ts  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  preview.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src-ts/: manifest.json
src-tt/: manifest.json
src-utools/: config.json5  content.md  package.json  plugin.json  preload.js  release.md  sub-window.js  test.html
(+1185 files in other folders)
