[package]
name = "knowledge-base"
version = "1.5.4"
description = "构建自己的知识库，笔记、动态、待办三合一，支持markdown笔记、富文本笔记和代码笔记，支持多种格式导入，支持zip导出，更多功能等你发现。"
authors = ["落雨不悔"]
license = "Apache-2.0"
repository = "https://gitee.com/qiaoshengda/knowledge-base"
default-run = "knowledge-base"
edition = "2021"
rust-version = "1.60"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.5.2", features = [ "fs-all", "protocol-asset", "path-all", "notification-all", "clipboard-write-text", "shell-open"] }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = [ "tauri/custom-protocol" ]
